Fix loading spinner alignment

--- a/src/components/LoadingSpinner/styles.scss
+++ b/src/components/LoadingSpinner/styles.scss
@@ -1,8 +1,6 @@
 .lds-ellipsis {
-  display: inline-block;
-  position: absolute;
-  left: 50%;
-  right: 50%;
+  margin: auto;
+  position: relative;
   width: 80px;
   height: 80px;
 }
